--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Edvin Lindén</title>
+    <meta name="author" content="Edvin Lindén">
+    <meta name="description" content="Personal site of Edvin Lindén">
+    <meta name="copyright" content="© Copyright 2020 to Present">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="style.css" type="text/css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="page-wrap">
+        <div class="header">
+            <h1>Hi, I'm Edvin!</h1>
+            <p>
+                <span style="font-size: 1.5em">
+                    I work as a product manager, however this is a place for my side projects.
+                </span>
+            </p>
+        </div>
+        <div class="project">
+            <div class="project-information">
+                <h2>The Box Timer</h2>
+                <p></p>January 2021 · iPhone App</p>
+
+                <div class="project-display">
+                    <img src="images/theboxtimer/theboxtimer.webp" class="project-image" alt="The Box Timer App" title="The Box Timer App" />
+                </div>
+                <p>
+                    The pandemic affected us all in different ways. 
+                    One of them was gyms being closed down and we had to workout at home or outside.
+                </p>
+                <p>
+                    When I couldn't find a good workout timer that was free, simple and not bloated with features I decided to create one my self.
+                </p>
+            </div>
+        </div>
+        <div class="footer">
+            <p>
+                Edvin Lindén
+                 · 
+                This site doesn't use any cookies or do any tracking.
+            </p>
+            <p class="footer-links">
+                <a href="mailto:edvin@edvinlinden.se">Email</a>
+                <a href="https://www.linkedin.com/in/edvin-linden">LinkedIn</a>
+                <a href="https://www.instagram.com/edvinlinden">Instagram</a>
+            </p>
+        </div>
+    </div>
+  </body>
+</html>
