Update The Box Timer privacy policy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
                 Edvin Lindén
                  · 
-                This site doesn't use any cookies or do any tracking.
+                 This site doesn't use any cookies or tracking.
             </p>
             <p class="footer-links">
                 <a href="mailto:edvin@edvinlinden.se">Email</a>
