--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -18,7 +18,8 @@
                     Privacy Policy
                 </span>
             </p>
-            <p>Updated January 9, 2021</p>
+        </div>
+        <p>Updated January 9, 2021</p>
             <p>
                 The privacy policy of The Box Timer is very simple – I do not collect any information about you! Everything you do in the app stays on your device.
             </p>
@@ -26,6 +27,12 @@
                 I believe that privacy should be protected. The best way to protect it is to share as little as possible. 
                 In order for me to operate the app and for you to use it there's no need to share any personal information. 
                 It's <i>just</i> a timer after all.
+            </p>
+        <div class="footer">
+            <p>
+                Edvin Lindén
+                · 
+                This site doesn't use any cookies or tracking.
             </p>
         </div>
     </div>
