Add Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Hi, I'm Edvin!</h1>
             <p>
                 <span style="font-size: 1.5em">
-                    I work as a product manager, however this is a place for my side projects.
+                    I work as a product manager at <a href="https://fortnox.se" target="_blank">Fortnox</a>, however this is a place for my side projects.
                 </span>
             </p>
         </div>
@@ -41,14 +41,16 @@
             <p>
                 Edvin Lindén
                  · 
-                 This site doesn't use any cookies or tracking.
+                 This site use privacy first analytics from <a href="https://www.cloudflare.com/web-analytics/" target="_blank">Cloudflare</a>
             </p>
             <p class="footer-links">
-                <a href="mailto:edvin@edvinlinden.se">Email</a>
-                <a href="https://www.linkedin.com/in/edvin-linden">LinkedIn</a>
-                <a href="https://www.instagram.com/edvinlinden">Instagram</a>
+                <a href="mailto:edvin@edvinlinden.se" target="_blank">Email</a>
+                <a href="https://www.linkedin.com/in/edvin-linden" target="_blank">LinkedIn</a>
+                <a href="https://www.instagram.com/edvinlinden" target="_blank">Instagram</a>
             </p>
         </div>
     </div>
+
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8517d869335249329d46966f0c693f67"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
