--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -32,9 +32,11 @@
             <p>
                 Edvin Lindén
                 · 
-                This site doesn't use any cookies or tracking.
+                This site use privacy first analytics from <a href="https://www.cloudflare.com/web-analytics/" target="_blank">Cloudflare</a>
             </p>
         </div>
     </div>
+
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8517d869335249329d46966f0c693f67"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
