Change email address

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Edvin Lindén
             </p>
             <p class="footer-links">
-                <a href="mailto:edvin@edvinlinden.se" target="_blank">Email</a>
+                <a href="mailto:hello@edvinlinden.se" target="_blank">Email</a>
                 <a href="https://www.linkedin.com/in/edvin-linden" target="_blank">LinkedIn</a>
                 <a href="https://www.instagram.com/edvinlinden" target="_blank">Instagram</a>
             </p>
