Add links to app store and product hunt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Hi, I'm Edvin!</h1>
             <p>
                 <span style="font-size: 1.5em">
-                    I work as a product manager at <a href="https://fortnox.se" target="_blank">Fortnox</a>, however this is a place for my side projects.
+                    I work as a product manager at <a href="https://fortnox.se" target="_blank" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
                 </span>
             </p>
         </div>
@@ -35,6 +35,16 @@
                 <p>
                     When I couldn't find a good workout timer that was free, simple and not bloated with features I decided to create one my self.
                 </p>
+                <p>
+                    <center>
+                        <a href="https://apps.apple.com/us/app/the-box-timer/id1547518531" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+                            <img src="images/appstore-badge.svg" alt="The Box Timer on the App Store" style="width: 250px; height: 54px;" width="250" height="54" />
+                        </a>
+                        <a href="https://www.producthunt.com/posts/the-box-timer?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-the-box-timer" target="_blank" rel="noopener noreferrer">
+                            <img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=280826&theme=dark" alt="The Box Timer - A simple workout timer | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" />
+                        </a>
+                    </center>
+                </p>
             </div>
         </div>
         <div class="footer">
@@ -42,9 +52,9 @@
                 Edvin Lindén
             </p>
             <p class="footer-links">
-                <a href="mailto:hello@edvinlinden.se" target="_blank">Email</a>
-                <a href="https://www.linkedin.com/in/edvin-linden" target="_blank">LinkedIn</a>
-                <a href="https://www.instagram.com/edvinlinden" target="_blank">Instagram</a>
+                <a href="mailto:hello@edvinlinden.se" target="_blank" rel="noopener noreferrer">Email</a>
+                <a href="https://www.linkedin.com/in/edvin-linden" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://www.instagram.com/edvinlinden" target="_blank" rel="noopener noreferrer">Instagram</a>
             </p>
         </div>
     </div>
