Update privacy policy for The Box Timer

--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -19,9 +19,9 @@
                 </span>
             </p>
         </div>
-        <p>Updated January 9, 2021</p>
+        <p>Updated January 20, 2021</p>
             <p>
-                The privacy policy of The Box Timer is very simple – I do not collect any information about you! Everything you do in the app stays on your device.
+                The privacy policy of The Box Timer is very simple – I do not collect any personal information about you!
             </p>
             <p>
                 I believe that privacy should be protected. The best way to protect it is to share as little as possible. 
