Fix Lighthouse issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Edvin Lindén</title>
@@ -26,7 +26,14 @@
                 <p></p>January 2021 · iPhone App</p>
 
                 <div class="project-display">
-                    <img src="images/theboxtimer/theboxtimer.webp" class="project-image" alt="The Box Timer App" title="The Box Timer App" />
+                    <img 
+                        src="images/theboxtimer/theboxtimer.webp" 
+                        class="project-image" 
+                        alt="The Box Timer App" 
+                        title="The Box Timer App" 
+                        width="720"
+                        height="360"
+                    />
                 </div>
                 <p>
                     The pandemic affected us all in different ways. 
