--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Box Timer - Privacy Policy</title>
+    <title>The Impossible Safe - Privacy Policy</title>
     <meta name="author" content="Edvin Lindén">
     <meta name="copyright" content="© Copyright 2020 to Present">
     <meta name="viewport" content="width=device-width,initial-scale=1">
