--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -25,21 +25,17 @@
         </div>
         <p>Updated June 30, 2021</p>
         <p>
-            Edvin Lindén built the The Impossible Safe app as an Ad Supported app. This SERVICE is provided by Edvin
+            Edvin Lindén built the The Impossible Safe app(<strong>"The App"</strong>) as an Ad Supported app. The App is provided by Edvin
             Lindén at no cost and is intended for use as is.
         </p>
         <p>
             This page is used to inform visitors regarding my policies with the collection, use, and disclosure of
-            Personal Information if anyone decided to use my Service.
+            Personal Information if anyone decided to use The App.
         </p>
         <p>
-            If you choose to use my Service, then you agree to the collection and use of information in relation to this
-            policy. The Personal Information that I collect is used for providing and improving the Service. I will not
+            If you choose to use The App, then you agree to the collection and use of information in relation to this
+            policy. The Personal Information that I collect is used for providing and improving The App. I will not
             use or share your information with anyone except as described in this Privacy Policy.
-        </p>
-        <p>
-            The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
-            accessible at The Impossible Safe unless otherwise defined in this Privacy Policy.
         </p>
         <p>
             <strong>
@@ -47,17 +43,11 @@
             </strong>
         </p>
         <p>
-            For a better experience, while using our Service, I may require you to provide us with certain personally
-            identifiable information. The information that I request will be retained on your device and is not
-            collected by me in any way.
-        </p>
-        <p>
-            The app does use third party services that may collect information used to identify you. </p>
-        <p> Link to privacy policy of third party service providers used by the app
+            The app does use third party services that may collect information used to identify you. Links to privacy policy of third party service providers used by the app are listed below.
         </p>
         <ul>
-            <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank"
-                    rel="noopener noreferrer">AdMob</a></li>
+            <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank" rel="noopener noreferrer">Apple</a>
+            <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">Google AdMob</a></li>
         </ul>
         <p>
             <strong>
@@ -65,10 +55,10 @@
             </strong>
         </p>
         <p>
-            I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and
+            I want to inform you that whenever you use The App, in a case of an error in the app I may collect data and
             information (through third party products) on your phone called Log Data. This Log Data may include
             information such as your device Internet Protocol (“IP”) address, device name, operating system version, the
-            configuration of the app when utilizing my Service, the time and date of your use of the Service, and other
+            configuration of the app when utilizing The App, the time and date of your use of The App, and other
             statistics.
         </p>
         <p>
@@ -81,10 +71,10 @@
             are sent to your browser from the websites that you visit and are stored on your device's internal memory.
         </p>
         <p>
-            This Service does not use these “cookies” explicitly. However, the app may use third party code and
+            The App does not use these “cookies” explicitly. However, the app may use third party code and
             libraries that use “cookies” to collect information and improve their services. You have the option to
             either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to
-            refuse our cookies, you may not be able to use some portions of this Service.
+            refuse our cookies, you may not be able to use some portions of this The App.
         </p>
         <p>
             <strong>
@@ -95,13 +85,13 @@
             I may employ third-party companies and individuals due to the following reasons:
         </p>
         <ul>
-            <li>To facilitate our Service;</li>
-            <li>To provide the Service on our behalf;</li>
+            <li>To facilitate The App;</li>
+            <li>To provide The App on our behalf;</li>
             <li>To perform Service-related services; or</li>
-            <li>To assist us in analyzing how our Service is used.</li>
+            <li>To assist us in analyzing how our The App is used.</li>
         </ul>
         <p>
-            I want to inform users of this Service that these third parties have access to your Personal Information.
+            I want to inform users of The App that these third parties have access to your Personal Information.
             The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to
             disclose or use the information for any other purpose.
         </p>
@@ -121,7 +111,7 @@
             </strong>
         </p>
         <p>
-            This Service may contain links to other sites. If you click on a third-party link, you will be directed to
+            The App may contain links to other sites. If you click on a third-party link, you will be directed to
             that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review
             the Privacy Policy of these websites. I have no control over and assume no responsibility for the content,
             privacy policies, or practices of any third-party sites or services.
@@ -132,11 +122,11 @@
             </strong>
         </p>
         <p>
-            These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable
+            The App do not address anyone under the age of 13. I do not knowingly collect personally identifiable
             information from children under 13 years of age. In the case I discover that a child under 13 has provided
-            me with personal information, I immediately delete this from our servers. If you are a parent or guardian
+            me with personal information, I immediately delete this information. If you are a parent or guardian
             and you are aware that your child has provided us with personal information, please contact me so that I
-            will be able to do necessary actions.
+            will be able to perform necessary actions.
         </p>
         <p>
             <strong>
@@ -144,13 +134,13 @@
             </strong>
         </p>
         <p>
-            I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically
+            I may update the Privacy Policy, you are advised to review this page periodically
             for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
         </p>
         <p>
             This policy is effective as of 2021-06-30</p>
         <p><strong>Contact Us</strong></p>
-        <p> If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at
+        <p> If you have any questions about the Privacy Policy, do not hesitate to contact me at
             edvin@edvinlinden.se.
         </p>
 </body>
