--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -25,7 +25,7 @@
         </div>
         <p>Updated June 30, 2021</p>
         <p>
-            Edvin Lindén built the The Impossible Safe app(<strong>"The App"</strong>) as an Ad Supported app. The App is provided by Edvin
+            Edvin Lindén built the The Impossible Safe app(<strong>"The App"</strong>) as an ad supported app. The App is provided by Edvin
             Lindén at no cost and is intended for use as is.
         </p>
         <p>
