--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -43,7 +43,7 @@
             </strong>
         </p>
         <p>
-            The app does use third party services that may collect information used to identify you. Links to privacy policy of third party service providers used by the app are listed below.
+            The app does use third party services that may collect information used to identify you. Links to the privacy policies of the third party service providers used by The App are listed below.
         </p>
         <ul>
             <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank" rel="noopener noreferrer">Apple</a>
