Add The Impossible Safe to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,42 @@
         </div>
         <div class="project">
             <div class="project-information">
+                <h2>The Impossible Safe</h2>
+                <p></p>June 2021 · iPhone App</p>
+
+                <div class="project-display">
+                    <img 
+                        src="images/the-impossible-safe/the-impossible-safe-cover.webp" 
+                        class="project-image" 
+                        alt="The Impossible Safe - Cover Image" 
+                        title="The Impossible Safe" 
+                        width="720"
+                        height="360"
+                    />
+                </div>
+                <p>
+                    A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" target="_blank">Break This Safe</a>, but when I got to try it by myself but it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
+                </p>
+                <p>
+                    However the concept stuck in my head and when I created my first iPhone App, The Box Timer, I tought that "hey, this is probably something I can pull off". 
+                </p>
+                <p>
+                    With my newfound confidence I spent a couple of weekends hacking away, trying to build something that was both fun and simple enought for me to actually complete. 
+                </p>
+                <p>
+                    The result is the game you see today – enjoy it as much as I did creating it!
+                </p>
+                <p>
+                    <center>
+                        <a href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+                            <img src="images/appstore-badge.svg" alt="The Impossible Safe on the App Store" style="width: 250px; height: 54px;" width="250" height="54" />
+                        </a>
+                    </center>
+                </p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-information">
                 <h2>The Box Timer</h2>
                 <p></p>January 2021 · iPhone App</p>
 
