--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     />
                 </div>
                 <p>
-                    A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" target="_blank">Break This Safe</a>, but when I got to try it by myself but it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
+                    A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" target="_blank">Break This Safe</a>, but when I got to try it for myself it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
                 </p>
                 <p>
                     However the concept stuck in my head and when I created my first iPhone App, The Box Timer, I tought that "hey, this is probably something I can pull off". 
