Fix error in the list items

--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -46,7 +46,7 @@
             The app does use third party services that may collect information used to identify you. Links to the privacy policies of the third party service providers used by The App are listed below.
         </p>
         <ul>
-            <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank" rel="noopener noreferrer">Apple</a>
+            <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank" rel="noopener noreferrer">Apple</a></li>
             <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">Google AdMob</a></li>
         </ul>
         <p>
