Fix error in project information

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="project">
             <div class="project-information">
                 <h2>The Impossible Safe</h2>
-                <p></p>June 2021 · iPhone App</p>
+                <p>June 2021 · iPhone App</p>
 
                 <div class="project-display">
                     <img 
@@ -60,7 +60,7 @@
         <div class="project">
             <div class="project-information">
                 <h2>The Box Timer</h2>
-                <p></p>January 2021 · iPhone App</p>
+                <p>January 2021 · iPhone App</p>
 
                 <div class="project-display">
                     <img 
