--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" as="style" media="screen" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"></noscript>
+    <!-- Fathom - beautiful, simple website analytics -->
+      <script src="https://cdn.usefathom.com/script.js" data-site="EHKGHUJH" defer></script>
+    <!-- / Fathom -->
   </head>
   <body>
     <div class="page-wrap">
