--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="../style.css" type="text/css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="https://cdn.usefathom.com/script.js" data-site="EHKGHUJH" defer></script>
+    <!-- / Fathom -->
   </head>
   <body>
     <div class="page-wrap">
