Update Fathom script

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" as="style" media="screen" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"></noscript>
     <!-- Fathom - beautiful, simple website analytics -->
-      <script src="https://cdn.usefathom.com/script.js" data-site="EHKGHUJH" defer></script>
+    <script src="https://cdn.usefathom.com/script.js" data-site="CIYVRBZT" defer></script>
     <!-- / Fathom -->
   </head>
   <body>
