--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"
         rel="stylesheet">
     <!-- Fathom - beautiful, simple website analytics -->
-    <script src="https://cdn.usefathom.com/script.js" data-site="EHKGHUJH" defer></script>
+    <script src="https://cdn.usefathom.com/script.js" data-site="CIYVRBZT" defer></script>
     <!-- / Fathom -->
 </head>
 
