Add privacy information in footer

--- a/index.html
+++ b/index.html
@@ -1,109 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Edvin Lindén</title>
-    <meta name="author" content="Edvin Lindén">
-    <meta name="description" content="Personal site of Edvin Lindén">
-    <meta name="copyright" content="© Copyright 2020 to Present">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="author" content="Edvin Lindén" />
+    <meta name="description" content="Personal site of Edvin Lindén" />
+    <meta name="copyright" content="© Copyright 2020 to Present" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link href="style.css" type="text/css" rel="stylesheet" />
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" as="style" media="screen" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"></noscript>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+      as="style"
+      media="screen"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+    /></noscript>
     <!-- Fathom - beautiful, simple website analytics -->
-    <script src="https://cdn.usefathom.com/script.js" data-site="CIYVRBZT" defer></script>
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      data-site="CIYVRBZT"
+      defer
+    ></script>
     <!-- / Fathom -->
   </head>
   <body>
     <div class="page-wrap">
-        <div class="header">
-            <h1>Hi, I'm Edvin!</h1>
-            <p>
-                <span style="font-size: 1.5em">
-                    I work as a product manager at <a href="https://fortnox.se" target="_blank" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
-                </span>
-            </p>
-        </div>
-        <div class="project">
-            <div class="project-information">
-                <h2>The Impossible Safe</h2>
-                <p>June 2021 · iPhone App</p>
+      <div class="header">
+        <h1>Hi, I'm Edvin!</h1>
+        <p>
+          <span style="font-size: 1.5em">
+            I work as a product manager at
+            <a
+              href="https://fortnox.se"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Fortnox</a
+            >, however this is a place for my side projects.
+          </span>
+        </p>
+      </div>
+      <div class="project">
+        <div class="project-information">
+          <h2>The Impossible Safe</h2>
+          <p>June 2021 · iPhone App</p>
 
-                <div class="project-display">
-                    <img 
-                        src="images/the-impossible-safe/the-impossible-safe-cover.webp" 
-                        class="project-image" 
-                        alt="The Impossible Safe - Cover Image" 
-                        title="The Impossible Safe" 
-                        width="720"
-                        height="360"
-                    />
-                </div>
-                <p>
-                    A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" target="_blank">Break This Safe</a>, but when I got to try it for myself it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
-                </p>
-                <p>
-                    However the concept stuck in my head and when I created my first iPhone App, The Box Timer, I tought that "hey, this is probably something I can pull off". 
-                </p>
-                <p>
-                    With my newfound confidence I spent a couple of weekends hacking away, trying to build something that was both fun and simple enought for me to actually complete. 
-                </p>
-                <p>
-                    The result is the game you see today – enjoy it as much as I did creating it!
-                </p>
-                <p>
-                    <center>
-                        <a href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
-                            <img src="images/appstore-badge.svg" alt="The Impossible Safe on the App Store" style="width: 250px; height: 54px;" width="250" height="54" />
-                        </a>
-                    </center>
-                </p>
-            </div>
+          <div class="project-display">
+            <img
+              src="images/the-impossible-safe/the-impossible-safe-cover.webp"
+              class="project-image"
+              alt="The Impossible Safe - Cover Image"
+              title="The Impossible Safe"
+              width="720"
+              height="360"
+            />
+          </div>
+          <p>
+            A few years ago I saw Rafael Conde's
+            <a href="http://breakthissafe.com/" target="_blank"
+              >Break This Safe</a
+            >, but when I got to try it for myself it didn't seem to work as
+            intended. Maybe a couple WatchOS releases broke something vital for
+            the game.
+          </p>
+          <p>
+            However the concept stuck in my head and when I created my first
+            iPhone App, The Box Timer, I tought that "hey, this is probably
+            something I can pull off".
+          </p>
+          <p>
+            With my newfound confidence I spent a couple of weekends hacking
+            away, trying to build something that was both fun and simple enought
+            for me to actually complete.
+          </p>
+          <p>
+            The result is the game you see today – enjoy it as much as I did
+            creating it!
+          </p>
+          <p>
+            <center>
+              <a
+                href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310"
+                target="_blank"
+                rel="noopener noreferrer"
+                style="text-decoration: none"
+              >
+                <img
+                  src="images/appstore-badge.svg"
+                  alt="The Impossible Safe on the App Store"
+                  style="width: 250px; height: 54px"
+                  width="250"
+                  height="54"
+                />
+              </a>
+            </center>
+          </p>
         </div>
-        <div class="project">
-            <div class="project-information">
-                <h2>The Box Timer</h2>
-                <p>January 2021 · iPhone App</p>
+      </div>
+      <div class="project">
+        <div class="project-information">
+          <h2>The Box Timer</h2>
+          <p>January 2021 · iPhone App</p>
 
-                <div class="project-display">
-                    <img 
-                        src="images/theboxtimer/theboxtimer.webp" 
-                        class="project-image" 
-                        alt="The Box Timer App" 
-                        title="The Box Timer App" 
-                        width="720"
-                        height="360"
-                    />
-                </div>
-                <p>
-                    The pandemic affected us all in different ways. 
-                    One of them was gyms being closed down and we had to workout at home or outside.
-                </p>
-                <p>
-                    When I couldn't find a good workout timer that was free, simple and not bloated with features I decided to create one my self.
-                </p>
-                <p>
-                    <center>
-                        <a href="https://apps.apple.com/us/app/the-box-timer/id1547518531" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
-                            <img src="images/appstore-badge.svg" alt="The Box Timer on the App Store" style="width: 250px; height: 54px;" width="250" height="54" />
-                        </a>
-                        <a href="https://www.producthunt.com/posts/the-box-timer?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-the-box-timer" target="_blank" rel="noopener noreferrer">
-                            <img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=280826&theme=dark" alt="The Box Timer - A simple workout timer | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" />
-                        </a>
-                    </center>
-                </p>
-            </div>
+          <div class="project-display">
+            <img
+              src="images/theboxtimer/theboxtimer.webp"
+              class="project-image"
+              alt="The Box Timer App"
+              title="The Box Timer App"
+              width="720"
+              height="360"
+            />
+          </div>
+          <p>
+            The pandemic affected us all in different ways. One of them was gyms
+            being closed down and we had to workout at home or outside.
+          </p>
+          <p>
+            When I couldn't find a good workout timer that was free, simple and
+            not bloated with features I decided to create one my self.
+          </p>
+          <p>
+            <center>
+              <a
+                href="https://apps.apple.com/us/app/the-box-timer/id1547518531"
+                target="_blank"
+                rel="noopener noreferrer"
+                style="text-decoration: none"
+              >
+                <img
+                  src="images/appstore-badge.svg"
+                  alt="The Box Timer on the App Store"
+                  style="width: 250px; height: 54px"
+                  width="250"
+                  height="54"
+                />
+              </a>
+              <a
+                href="https://www.producthunt.com/posts/the-box-timer?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-the-box-timer"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=280826&theme=dark"
+                  alt="The Box Timer - A simple workout timer | Product Hunt"
+                  style="width: 250px; height: 54px"
+                  width="250"
+                  height="54"
+                />
+              </a>
+            </center>
+          </p>
         </div>
-        <div class="footer">
-            <p>
-                Edvin Lindén
-            </p>
-            <p class="footer-links">
-                <a href="mailto:hello@edvinlinden.se" target="_blank" rel="noopener noreferrer">Email</a>
-                <a href="https://www.linkedin.com/in/edvin-linden" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                <a href="https://www.instagram.com/edvinlinden" target="_blank" rel="noopener noreferrer">Instagram</a>
-            </p>
+      </div>
+      <div class="footer">
+        <div>
+          <p>Edvin Lindén</p>
+          <p class="footer-links">
+            <a
+              href="mailto:hello@edvinlinden.se"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Email</a
+            >
+            <a
+              href="https://www.linkedin.com/in/edvin-linden"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+            <a
+              href="https://www.instagram.com/edvinlinden"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >
+          </p>
         </div>
+        <div>
+          <p>
+            This site doesn't use cookies or tracking,
+            <a
+              href="https://usefathom.com/ref/SACEEW"
+              target="_blank"
+              rel="noopener noreferrer"
+              >I use privacy-focused analytics</a
+            >.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
